--- a/test.ipynb
+++ b/test.ipynb
@@ -12,83 +12,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n",
-      "adding vehicle\n"
+     "data": {
+      "text/plain": [
+       "59.76"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "16.6/1000*3600"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m현재 셀 또는 이전 셀에서 코드를 실행하는 동안 Kernel이 충돌했습니다. \n",
+      "\u001b[1;31m셀의 코드를 검토하여 가능한 오류 원인을 식별하세요. \n",
+      "\u001b[1;31m자세한 내용을 보려면 <a href='https://aka.ms/vscodeJupyterKernelCrash'>여기</a>를 클릭하세요. \n",
+      "\u001b[1;31m자세한 내용은 Jupyter <a href='command:jupyter.viewOutput'>로그</a>를 참조하세요."
      ]
     }
    ],
